css/style.css
/* ... */
.header-logo:hover, header.logo:focus {
    color: var(--accent-dark-color)
}

.nav-list {
    display: flex;
}

.nav-item:not(:last-child) {
    margin-right: 53px;
}

.nav-link{
    font-family: 'Roboto';
    font-size: 14px;
    line-height: calc(16/14);
    letter-spacing: 0.02em;
    color: var(--primary-text-color);
    padding: 32px 0;
    display: block;
}

.nav-link:hover, 
.nav-link:focus {
    color: var(--accent-color);
}

.nav-link-current {
    color: var(--accent-color);
    position: relative;
}

.nav-link-current::after {
    content: '';
    position: absolute;
    height: 4px;
    bottom: 0;
    right: 0;
    width: 100%;
    background: var(--accent-color)
}

.header-contact-list {
    display: flex;
    margin-left: auto;
}

.header-contact-item:not(:last-child) {
    margin-right: 50px;
}

.header-contact-link {
    font-style: normal;
    font-size: 14px;
    line-height: calc(16/14);
    letter-spacing: 0.02em;
    color: var(--secondary-text-color);
    padding: 32px 0;
    display: flex;
    align-items: center;
}

.header-contact-link:hover,
.header-contact-link:focus {
    color: var(--accent-color)
}

.header-contact-link-icon {
    margin-right: 10px;
    fill: currentcolor;
}
/* Hero */

.hero-section {
    background-color: var(--background-dark-color);
    padding: 200px 0; 
    background-image: 
    linear-gradient(rgba(47, 48, 58, 0.4), 
    rgba(47, 48, 58, 0.4)), 
    url(../images/mainpageimages/hero-background.jpg);  
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.hero-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.hero-title {
    font-weight: 900;
    font-size: 44px;
    line-height: calc(60/44);
    text-align: center;
    letter-spacing: 0.06em;
    text-transform: uppercase;
    color: var(--secondary-title-color);
    display: inline-block;
    width: 696px;
    margin-bottom: 30px;
}

.hero-button {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    font-size: 16px;
    line-height: calc(30/16);
    text-align: center;
    letter-spacing: 0.06em;
    color: var(--secondary-title-color);
    background-color: var(--accent-color);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
    border-radius: 4px;
    cursor: pointer;
    display: inline-block;
    border: none;
    padding: 10px 20px;
}

.hero-button:hover,
.hero-button:focus {
    color: var(--accent-color);
    background-color: var(--accent-dark-color);
}

.hero-modal-container {
    width: 100vw;
    height: 100vh;
    position: absolute;
    background-color: rgba(0, 0, 0, 0.2);
    top: 0px;
    left: 0px;
    transition: opacity ease 1s;
}

.hero-modal-window {
    width: 528px;
    height: 581px;
    margin-top: 221px;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    background: var(--secondary-title-color);
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
}

.modal-close-link {
    width: 30px;
    height: 30px;
    background-color: var(--secondary-title-color);
    color: #000;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    border: 1px solid rgba(0, 0, 0, 0.1);
    margin-top: 8px;
    margin-left: 490px;
}

.modal-close-link:hover,
.modal-close-link:focus {
    background-color: var(--accent-color);
    color: var(--secondary-title-color);
}

.modal-close-icon {
    fill: currentColor;
}

/* Features */

.features-title {
     position: absolute;
      width: 1px;
      height: 1px;
      margin: -1px;
      border: 0;
      padding: 0;
      white-space: nowrap;
      clip-path: inset(100%);
      clip: rect(0 0 0 0);
      overflow: hidden;
}

.features-list {
    display: flex;
    justify-content: center;
}

.features-item {
    display: inline-block;
    width: 270px;
}

.features-item:not(:last-child) {
    margin-right: 30px;
}

.features-icon-container {
    display: flex;
    height: 120px;
    justify-content: center;
    align-items: center;
    background-color: var(--background-light-color);
    border-radius: 4px;
    margin-bottom: 30px;
}

.features-item-title {
    font-weight: 700;
    font-size: 14px;
    line-height: calc(16/14);
    text-transform: uppercase;
    color: var(--primary-title-color);
    margin-bottom: 10px;
}

.features-item-text {
    font-weight: 400;
    font-size: 14px;
    line-height: calc(24/14);
    color: var(--secondary-text-color);
}

/* What we do */

.what-we-do-section {
    padding-top: 0px;
}

.what-we-do-list {
    display: flex;
    justify-content: center;
}

.what-we-do-item {
    position: relative;
}

.what-we-do-item:not(:last-child) {
    margin-right: 30px;
}

.what-we-do-item-overlay {
    position: absolute;
    height: 70px;
    width: 100%;
    background: rgba(47, 48, 58, 0.8);
    bottom: 0;
}

.what-we-do-item-overlay>p {
    color: var(--secondary-title-color);
    font-weight: 700;
    font-size: 14px;
    line-height: calc(16/14);
    text-align: center;
    text-transform: uppercase;
    margin-top: 27px;
}

/* Our Team */

.our-team-section {
    background-color: var(--background-light-color);
}

.our-team-list {
    background-color: var(--background-light-color);
    display: flex;
    justify-content: center;
}

.our-team-item {
    background: var(--secondary-title-color);
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 0px 0px 4px 4px;
    display: flex;
    flex-direction: column;
    width: 270px;
}

.our-team-item:not(:last-child) {
    margin-right: 30px;
}

.our-team-item-picture {
    margin-bottom: 30px;
}

.our-team-item-title {
    font-size: 16px;
    line-height: calc(19/16);
    text-align: center;
    color: var(--primary-title-color);
    margin-bottom: 10px;
}
/* ... */

